<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        tools:context=".VerifyMobileActivity">


    <LinearLayout
            android:id="@+id/linearSlider"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:layout_marginTop="20dip">

        <ImageView
                android:id="@+id/sliderImage"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/book"/>

        <TextView
                android:id="@+id/tvSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slideone"
                android:textSize="20dp"

                android:gravity="center"
                android:textColor="#000000"/>

    </LinearLayout>

    <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeInUdhar"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_above="@id/otp"
            android:layout_marginBottom="20dp"/>

    <TextView
            android:id="@+id/otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendOtp"
            android:layout_above="@id/numberVerifyBtn"
            android:textColor="#000000"
            android:layout_marginBottom="45dp"
            android:textSize="14dp"/>

    <Button
            android:id="@+id/numberVerifyBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_above="@id/tvPrivacyPolicy"
            android:text="@string/verifyNumberBtn"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:drawableLeft="@drawable/ic_verify"
            android:paddingLeft="80dp"
            android:paddingRight="100dp"
            android:background="@drawable/btn_verify_design"
            android:layout_marginBottom="30dp"/>

    <TextView
            android:id="@+id/tvPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/veryfyText"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="13dp"/>

</RelativeLayout>


