<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:id="@+id/namasteLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp" android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
            android:layout_marginRight="20dp" android:layout_marginEnd="20dp" android:layout_marginBottom="20dp">

        <ImageView
                android:id="@+id/imageNamaste"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/namaste"
                android:layout_gravity="center_horizontal"/>

        <TextView
                android:id="@+id/tvNamaste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/namaste_text"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="#0E3F15"
                android:gravity="center"/>

        <TextView
                android:text="@string/select_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvSelectLanguage"
                android:textSize="20dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/languageLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/namasteLinearLayout" android:layout_marginTop="50dp" android:gravity="center"
            android:layout_alignParentStart="true" android:layout_marginLeft="0dp" android:layout_marginStart="0dp"
            android:layout_alignParentLeft="true">


        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <Button
                    android:id="@+id/btnhindi"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/round_button"
                    android:text="@string/hindi_language"
                    android:textSize="40sp"
                    android:textColor="#ffffff"
                    android:layout_margin="15dp"/>
            <TextView
                    android:id="@+id/hindiText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hindi_word"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="25dp"
            />

        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <Button
                    android:id="@+id/btnEnglish"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/engliish_round_btn"
                    android:text="@string/english_language"
                    android:textSize="35dp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="15dp"/>

            <TextView
                    android:id="@+id/englisText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/english_word"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="25dp"
            />

        </LinearLayout>


    </LinearLayout>

    <TextView
            android:id="@+id/tvSpredLove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spread_love"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="15dp"
            android:layout_alignParentBottom="true"
    />

</RelativeLayout>