<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".VeryfyEnterNumber"
        android:padding="15dp">


    <EditText
            android:id="@+id/etNumber"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/mobilenumber"
            android:maxLength="10"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_phonesymbol"
            android:textColorHint="#5C000000"
            android:paddingRight="150dp"
            android:paddingLeft="10dp"/>


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viryfynumber"
            android:layout_above="@id/verifyotp"
            android:textColor="#000000"
            android:textSize="25dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>

    <TextView
            android:id="@+id/verifyotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendotp"
            android:layout_above="@id/btnOk"
            android:textSize="15dp"
            android:textColor="#000000"
            android:layout_marginBottom="20dp"/>

    <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:background="@drawable/btnok_number"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="OK"
            android:drawableLeft="@drawable/ic_right"
            android:paddingLeft="10dp" />

</RelativeLayout>